Update portfolio with latest changes

--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
     and back-end: PHP, Laravel, Python, Django, MySQL.
 </p>
 
-
+<div class="cv-container">
+    <a href="images/Fathimathul Sahala T K.pdf" class="btn">Download CV</a>
+</div>
             <div class="social-media">
+                
                 <!-- <a href="https://www.facebook.com/SahalaMusthafa" target="_blank">
     <i class='bx bxl-facebook'></i>
 </a> -->
@@ -68,7 +71,7 @@
 
             </div>
 
-            <a href="images/Fathimathul Sahala T K.pdf" class="btn">Download CV</a>
+            <!-- <a href="images/Fathimathul Sahala T K.pdf" class="btn">Download CV</a> -->
         </div>
 
         <div class="profession-container">
