Update portfolio with latest changes

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ https://htmlpreview.github.io/?https://github.com/sahalamusthafa02/Age-Calculato
     </section>
 
     <!-- testimonial design -->
-    <div class="testimonial-container">
+    <!-- <div class="testimonial-container">
         <h2 class="heading">Valuable <span>Testimonial</span></h2>
 
         <div class="testimonial-wrapper">
@@ -349,7 +349,7 @@ https://htmlpreview.github.io/?https://github.com/sahalamusthafa02/Age-Calculato
                 <div class="swiper-pagination"></div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- contact section design -->
     <section class="contact" id="contact">
